--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,64 +8,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-20.04
-            mariadb-version: 10.5
-          - os: ubuntu-18.04
-            mariadb-version: 10.5
-          - os: ubuntu-18.04
-            mariadb-version: 10.4
-          - os: ubuntu-18.04
-            mariadb-version: 10.3
-          - os: ubuntu-18.04
-            mariadb-version: 10.2
-          - os: ubuntu-16.04
-            mariadb-version: 10.5
-          - os: ubuntu-16.04
-            mariadb-version: 10.4
-          - os: ubuntu-16.04
-            mariadb-version: 10.3
-          - os: ubuntu-16.04
-            mariadb-version: 10.2
-          - os: macos-11.0
-            mariadb-version: 10.5
-          - os: macos-11.0
-            mariadb-version: 10.4
-          - os: macos-11.0
-            mariadb-version: 10.3
-          - os: macos-11.0
-            mariadb-version: 10.2
-          - os: macos-11.0
-            mariadb-version: 10.1
-          - os: macos-10.15
-            mariadb-version: 10.5
-          - os: macos-10.15
-            mariadb-version: 10.4
-          - os: macos-10.15
-            mariadb-version: 10.3
-          - os: macos-10.15
-            mariadb-version: 10.2
-          - os: macos-10.15
-            mariadb-version: 10.1
           - os: windows-2019
             mariadb-version: 10.5
-          - os: windows-2019
-            mariadb-version: 10.4
-          - os: windows-2019
-            mariadb-version: 10.3
-          - os: windows-2019
-            mariadb-version: 10.2
-          - os: windows-2019
-            mariadb-version: 10.1
-          - os: windows-2016
-            mariadb-version: 10.5
-          - os: windows-2016
-            mariadb-version: 10.4
-          - os: windows-2016
-            mariadb-version: 10.3
-          - os: windows-2016
-            mariadb-version: 10.2
-          - os: windows-2016
-            mariadb-version: 10.1
     steps:
     - uses: ankane/setup-mariadb@v1
       with:
@@ -73,3 +17,4 @@ jobs:
     - run: mysql --version
     - run: mysqladmin create testdb
     - run: mysql -D testdb -e 'SELECT VERSION()'
+    - run: ls
