--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
           - os: windows-2019
             mariadb-version: 10.5
     steps:
-    - uses: ankane/setup-mariadb@v1
+    - uses: ankane/setup-mariadb@tmpdir
       with:
         mariadb-version: ${{ matrix.mariadb-version }}
     - run: mysql --version
